타이틀 변경

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <!-- pybo CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 
-    <title>Hello, Pybo!</title>
+    <title>파이보</title>
 </head>
 <body>
 {% include "navbar.html" %}
